ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
spec:
  rules:
  - host: k3os-6802
    http:
      paths:
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: grafana
              port: 
                name: http-grafana
        - path: /graphite
          pathType: Prefix
          backend:
            service:
              name: graphite
              port: 
                name: graphite-ui
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-grafana
spec:
  stripPrefix:
    prefixes:
      - /grafana
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
# more fields...
  routes:
    # more fields...
    middlewares:
      - name: strip-grafana
